syntax = "proto3";
package mychain.mychain;

import "mychain/pool.proto";
// this line is used by starport scaffolding # proto/tx/import
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "mychain/x/mychain/types";

// Msg defines the Msg service.
service Msg {
    rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
  rpc UpdatePool(MsgUpdatePool) returns (MsgUpdatePoolResponse);
  rpc DeletePool(MsgDeletePool) returns (MsgDeletePoolResponse);
  rpc AddLiquidity(MsgAddLiquidity) returns (MsgAddLiquidityResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePool {
  string creator = 1;
  string denom = 2;
  string desc = 3;
  int32 height = 4;
}

message MsgCreatePoolResponse {
  uint64 id = 1;
}

message MsgUpdatePool {
  string creator = 1;
  uint64 id = 2;
  string denom = 3;
  string desc = 4;
  int32 height = 5;
}

message MsgUpdatePoolResponse {}

message MsgDeletePool {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeletePoolResponse {}

message MsgAddLiquidity {
  string creator = 1;
  repeated cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

message MsgAddLiquidityResponse {
}

// this line is used by starport scaffolding # proto/tx/message
